@@ -1,0 +1,2 @@
+PKG_FEDIVERSE="Πακέτο Fediverse Tools package"
+PKG_FEDIVERSE_XML_DESCRIPTION="Fediverse Tools για το Joomla™. Πρόσθετα και ενθέματα για να ενσωματώσετε το Mastodon με τον ιστότοπό σας φτιαγμένο με το Joomla."
