@@ -1,0 +1,77 @@
+MOD_FEDIVERSEFEED="Fediverse - Ροή Mastodon"
+MOD_FEDIVERSEFEED_XML_DESCRIPTION="Προβάλει την δημόσια ροή ενός χρήστη του Mastodon"
+
+[Basic]
+MOD_FEDIVERSEFEED_HANDLE_LABEL="Όνομα χρήστη"
+MOD_FEDIVERSEFEED_HANDLE_DESC="Το όνομα χρήστη του Mastodon για τον οποίο θέλετε να προβάλλετε την ροή των τουτ του. Για παράδειγμα <code>nikosdion@fosstodon.org</code>."
+
+MOD_FEDIVERSEFEED_FEED_RTL_LABEL="Ροή Δεξιά προ Αριστερά"
+MOD_FEDIVERSEFEED_FEED_RTL_DESC="Ενεργοποιήστε αν η ροή είναι γραμμένη κατά κύριο λόγο σε γλώσσες που γράφονται από τα δεξιά προς τα αριστερά, π.χ. Αραβικά."
+
+MOD_FEDIVERSEFEED_FEED_TITLE_LABEL="Προβολή Ονόματος Εμφάνισης"
+MOD_FEDIVERSEFEED_FEED_TITLE_DESC="Θέλετε να προβάλλετε το Όνομα Εμφάνισης του χρήστη του Mastodon;"
+
+MOD_FEDIVERSEFEED_FEED_IMAGE_LABEL="Προβολή Αβατάρ"
+MOD_FEDIVERSEFEED_FEED_IMAGE_DESC="Θέλετε να προβάλλετε το αβατάρ (εικόνα προφίλ) του χρήστη του Mastodon; Παρακαλώ θυμηθείτε πως οι εικόνες φορτώνονται απευθείας από τον διακομιστή του Mastodon στον οποίο είναι εγγεγραμμένος ο χρήστης. Υπό ορισμένες συνθήκες μπορεί να θεωρηθεί πως μεταφέρονται προσωπικές πληροφορίες επειδή ο διακομιστής βλέπει την διεύθυνση IP του επισκέπτη σας. Αν δεν είστε σίγουροι παρακαλώ ρωτήστε τον δικηγόρο σας."
+
+MOD_FEDIVERSEFEED_FEED_LINK_LABEL="Σύνδεσμος στο Προφίλ"
+MOD_FEDIVERSEFEED_FEED_LINK_DESC="Θέλετε να μετατρέψετε το Όνομα Εμφάνισης ή/και το αβατάρ σαν σύνδεσμο προς το δημόσιο προφίλ του χρήστη στον διακομιστή Mastodon στον οποίο είναι εγγεγραμένος;"
+
+MOD_FEDIVERSEFEED_FEED_DESC_LABEL="Προβολή Πληροφοριών Προφίλ"
+MOD_FEDIVERSEFEED_DESC_LINK_DESC="Θέλετε να προβάλλετε την πολύ σύντομη σύνοψη του προφίλ του χρήστη, όπως την έχει ορίσει στο Mastodon;"
+
+MOD_FEDIVERSEFEED_FEED_ITEMS_LABEL="Μέγιστο Πλήθος Τουτ"
+MOD_FEDIVERSEFEED_FEED_ITEMS_DESC="Ο μέγιστος αριθμός τουτ που θα προβληθούν στο ένθεμα. Αν ο χρήστης έχει λιγότερα συνολικά δημόσια τουτ από αυτόν τον αριθμό τότε θα προβληθούν μόνο όσα τουτ είναι διαθέσιμα στην ροή του χρήστη."
+
+MOD_FEDIVERSEFEED_FEED_MEDIA_LABEL="Προβολή Πολυμέσων"
+MOD_FEDIVERSEFEED_FEED_MEDIA_DESC="Θέλετε να προβάλλετε τα πολυμέσα (φωτογραφίες, βίντεο) που είναι συννημένα σε κάθε τουτ; Παρακαλώ θυμηθείτε πως οι εικόνες φορτώνονται απευθείας από τον διακομιστή του Mastodon στον οποίο είναι εγγεγραμμένος ο χρήστης. Υπό ορισμένες συνθήκες μπορεί να θεωρηθεί πως μεταφέρονται προσωπικές πληροφορίες επειδή ο διακομιστής βλέπει την διεύθυνση IP του επισκέπτη σας. Αν δεν είστε σίγουροι παρακαλώ ρωτήστε τον δικηγόρο σας."
+
+[Caching]
+COM_MODULES_FEDICACHE_FIELDSET_LABEL="Προσωρινή Μνήμη Ροής"
+
+MOD_FEDIVERSEFEED_CACHE_FEED_LABEL="Προσωρινή Μνήμη Ροής και Λογαριασμού"
+MOD_FEDIVERSEFEED_CACHE_FEED_DESC="Θέλετε να διατηρηθούν οι πληροφορίες της ροής και του λογαριασμού στην προσωρινή μνήμη αντί να επαναφορτώνονται σε κάθε σελίδα; Αυτό λειτουργεί ανεξάρτητα από τις ρυθμίσεις προσωρινής μνήμης του Joomla (το οποίο αποθηκεύει την HTML που παράγεται από το ένθεμα) και μειώνει σημαντικά τον φόρτο στον διακομιστή σας, αλλά και στον διακομιστή Mastodon στον οποίο είναι εγγεγραμένος ο χρήστης του οποίου προβάλλετε την ροή. Συνίσταται: Ναι."
+
+MOD_FEDIVERSEFEED_FEED_CACHE_LIFETIME_LABEL="Χρόνος Προσωρινής Μνήμης Ροής (δευτερόλεπτα)"
+MOD_FEDIVERSEFEED_FEED_CACHE_LIFETIME_DESC="Το ελάχιστο χρονικό διάστημα, σε δευτερόλεπτα, μεταξύ διαδοχικών επαναφορτώσεων της ροής τουτ. Εξορισμού τιμή: 3600 (μία ώρα)."
+
+MOD_FEDIVERSEFEED_ACCOUNT_CACHE_LIFETIME_LABEL="Χρόνος Προσωρινής Μνήμης Λογαριαμού (δευτερόλεπτα)"
+MOD_FEDIVERSEFEED_ACCOUNT_CACHE_LIFETIME_DESC="Το ελάχιστο χρονικό διάστημα, σε δευτερόλεπτα, μεταξύ διαδοχικών επαναφορτώσεων των πληροφοριών του λογαριασμού. Εξορισμού τιμή: 3600 (μία ώρα)."
+
+[Advanced]
+MOD_FEDIVERSEFEED_GET_TIMEOUT_LABEL="Λήξη Χρονικού Ορίου Αιτήματος (δευτερόλεπτα)"
+MOD_FEDIVERSEFEED_GET_TIMEOUT_DESC="Το μέγιστο χρονικό διάστημα που θα περιμένουμε να απαντήσει ο διακομιστής του Mastodon στο αίτημά μας για φόρτωση της ροής ή/και των πληροφοριών του λογαριασμού πριν υποθέσουμε πως η φόρτωση είναι αδύνατη."
+
+MOD_FEDIVERSEFEED_CUSTOM_CERTIFICATE_LABEL="Προσασρμοσμένη Διαδρομή Πιστοποιητικού TLS"
+MOD_FEDIVERSEFEED_CUSTOM_CERTIFICATE_DESC="Η απόλυτη διαδρομή στο σύστημα αρχείων προς ένα προσαρμοσμένο πιστοποιητικό TLS. Απαιτείται μόνο έαν ο διακομιστής Mastodon χρησιμοποιεί ένα αυτουπογεγραμμένο πιστοποιητικό TLS."
+
+[Messages]
+MOD_FEDIVERSEFEED_ERR_NO_FEED="Αδυναμί φόρτωσης τουτ."
+MOD_FEDIVERSEFEED_ERR_UNSUPPORTED_MEDIA="Μη υποστηριζόμενος τύπος αρχείου ‘%s’"
+MOD_FEDIVERSEFEED_CONTENT_WARNING="Προειδοποίηση περιεχομένου:"
+MOD_FEDIVERSEFEED_CONTENT_WARNING_BADGE="Προειδοποίηση Περιεχομένου"
+MOD_FEDIVERSEFEED_TOOTED_ON="Δημοσιεύτηκε την"
+MOD_FEDIVERSEFEED_LAST_UPDATED_ON="Τελευταία ενημέρωση την"
+MOD_FEDIVERSEFEED_REBLOGGED="Προωθήσεις %s"
+
+[TimeAgo]
+
+MOD_FEDIVERSEFEED_TIME_SHORT_SECOND="%uδ"
+MOD_FEDIVERSEFEED_TIME_SHORT_MINUTE="%uλ"
+MOD_FEDIVERSEFEED_TIME_SHORT_HOUR="%uω"
+MOD_FEDIVERSEFEED_TIME_SHORT_DAY="%uη"
+MOD_FEDIVERSEFEED_TIME_SHORT_WEEK="%uε"
+MOD_FEDIVERSEFEED_TIME_SHORT_YEAR="%uχ"
+
+MOD_FEDIVERSEFEED_TIME_LONG_SECOND="%u δευτερόλεπτα"
+MOD_FEDIVERSEFEED_TIME_LONG_SECOND_1="Ένα δευτερόλεπτο"
+MOD_FEDIVERSEFEED_TIME_LONG_MINUTE="%u λεπτά"
+MOD_FEDIVERSEFEED_TIME_LONG_MINUTE_1="Ένα λεπτό"
+MOD_FEDIVERSEFEED_TIME_LONG_HOUR="%u ώρες"
+MOD_FEDIVERSEFEED_TIME_LONG_HOUR_1="Μία ώρα"
+MOD_FEDIVERSEFEED_TIME_LONG_DAY="%u ημέρες"
+MOD_FEDIVERSEFEED_TIME_LONG_DAY_1="Μία ημέρα"
+MOD_FEDIVERSEFEED_TIME_LONG_WEEK="%u εβδομάδες"
+MOD_FEDIVERSEFEED_TIME_LONG_WEEK_1="Μία εβδομάδα"
+MOD_FEDIVERSEFEED_TIME_LONG_YEAR="%u χρόνια"
+MOD_FEDIVERSEFEED_TIME_LONG_YEAR_1="Ένα έτος"
