@@ -1,0 +1,2 @@
+MOD_FEDIVERSEFEED="Fediverse - Ροή Mastodon"
+MOD_FEDIVERSEFEED_XML_DESCRIPTION="Προβάλει την δημόσια ροή ενός χρήστη του Mastodon"
