@@ -27,6 +27,9 @@
         <language tag="en-GB">en-GB/mod_fediversefeed.ini</language>
         <language tag="en-GB">en-GB/mod_fediversefeed.sys.ini</language>
 
+        <language tag="el-GR">el-GR/mod_fediversefeed.ini</language>
+        <language tag="el-GR">el-GR/mod_fediversefeed.sys.ini</language>
+
         <language tag="de-DE">de-DE/mod_fediversefeed.ini</language>
         <language tag="de-DE">de-DE/mod_fediversefeed.sys.ini</language>
     </languages>
