@@ -34,6 +34,9 @@
 		<language tag="en-GB">en-GB/plg_content_fediverse.ini</language>
 		<language tag="en-GB">en-GB/plg_content_fediverse.sys.ini</language>
 
+		<language tag="el-GR">el-GR/plg_content_fediverse.ini</language>
+		<language tag="el-GR">el-GR/plg_content_fediverse.sys.ini</language>
+
 		<language tag="de-DE">de-DE/plg_content_fediverse.ini</language>
 		<language tag="de-DE">de-DE/plg_content_fediverse.sys.ini</language>
 	</languages>
