@@ -1,0 +1,44 @@
+PLG_CONTENT_FEDIVERSE_CONTENT_WARNING="Προειδοποίηση Περιεχομένου:"
+PLG_CONTENT_FEDIVERSE_CONTENT_WARNING_BADGE="Προειδοποίηση Περιεχομένου"
+
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_SECOND="%uδ"
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_MINUTE="%uλ"
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_HOUR="%uω"
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_DAY="%uη"
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_WEEK="%uε"
+PLG_CONTENT_FEDIVERSE_TIME_SHORT_YEAR="%uχ"
+
+PLG_CONTENT_FEDIVERSE_TIME_LONG_SECOND="%u δευτερόλεπτα"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_SECOND_1="Ένα δευτερόλεπτο"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_MINUTE="%u λεπτά"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_MINUTE_1="Ένα λεπτό"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_HOUR="%u ώρες"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_HOUR_1="Μία ώρα"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_DAY="%u ημέρες"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_DAY_1="Μία ημέρα"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_WEEK="%u εβδομάδες"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_WEEK_1="Μία εβδομάδα"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_YEAR="%u χρόνια"
+PLG_CONTENT_FEDIVERSE_TIME_LONG_YEAR_1="Ένα έτος"
+
+PLG_CONTENT_FEDIVERSE_LBL_VISIBILITY_PUBLIC="Δημόσιο"
+PLG_CONTENT_FEDIVERSE_LBL_VISIBILITY_UNLISTED="Μη Καταχωρημένο"
+PLG_CONTENT_FEDIVERSE_LBL_VISIBILITY_PRIVATE="Followers Only"
+PLG_CONTENT_FEDIVERSE_LBL_VISIBILITY_DIRECT="Direct Message"
+
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_REPLIES_N="%d replies"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_REPLIES_N_1="%d reply"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_BOOSTS_N="Boosted %d times"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_BOOSTS_N_1="Boosted %d time"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_FAVES_N="Marked as favourite %d times"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_FAVES_N_1="Marked as favourite %d time"
+PLG_CONTENT_FEDIVERSE_LBL_ACTION_SHARE="Share"
+
+PLG_CONTENT_FEDIVERSE_ERR_UNSUPPORTED_MEDIA="Unsupported media type ‘%s’"
+PLG_CONTENT_FEDIVERSE_ERR_CANNOT_LOAD_HEAD="Cannot load toot"
+PLG_CONTENT_FEDIVERSE_ERR_CANNOT_LOAD_BODY="If you believe you are receiving this message in error you can try <a href=\"%s\" rel=\"nofollow\">viewing the toot on the web</a>."
+
+PLG_CONTENT_FEDIVERSE_LBL_POLL_PEOPLE_N="One person"
+PLG_CONTENT_FEDIVERSE_LBL_POLL_PEOPLE_N_1="%u people"
+PLG_CONTENT_FEDIVERSE_LBL_POLL_EXPIRED="Closed on %s"
+PLG_CONTENT_FEDIVERSE_LBL_POLL_LEFT="%s left"
