@@ -1,0 +1,14 @@
+PLG_CONTENT_FEDIVERSE="Περιεχόμενο - Ένθεση Τουτ"
+PLG_CONTENT_FEDIVERSE_XML_DESCRIPTION="Ενθέτει τουτ του Mastodon στο περιεχόμενό σας. Αυτό το πρόσθετο αποτελεί μέρος του πακέτου Fediverse Tools για το Joomla."
+
+PLG_CONTENT_FEDIVERSE_CACHE_TOOT_LABEL="Προσωρινή Μνήμη Τουτ"
+PLG_CONTENT_FEDIVERSE_CACHE_TOOT_DESC="Αποθήκευση των πληροφοριών του τουτ στην προσωρινή μνήμη αντί για επαναφόρτωσή του σε κάθε προβολή της σελίδας; Αυτό λειτουργεί ανεξάρτητα από τις ρυθμίσεις προσωρινής μνήμης του Joomla (το οποίο αποθηκεύει την HTML που παράγεται από το πρόσθετο) και μειώνει σημαντικά τον φόρτο στον διακομιστή σας, αλλά και στον διακομιστή Mastodon στον οποίο είναι εγγεγραμένος ο χρήστης του οποίου προβάλλετε την ροή. Συνίσταται: Ναι."
+
+PLG_CONTENT_FEDIVERSE_TOOT_CACHE_LIFETIME_LABEL="Χρόνος Προσωρινής Μνήμης (δευτερόλεπτα)"
+PLG_CONTENT_FEDIVERSE_TOOT_CACHE_LIFETIME_DESC="Το ελάχιστο χρονικό διάστημα, σε δευτερόλεπτα, μεταξύ διαδοχικών επαναφορτώσεων των πληροφοριών του τουτ. Εξορισμού τιμή: 120 (δύο λεπτά)."
+
+PLG_CONTENT_FEDIVERSE_GET_TIMEOUT_LABEL="Λήξη Χρονικού Ορίου Αιτήματος (δευτερόλεπτα)"
+PLG_CONTENT_FEDIVERSE_GET_TIMEOUT_DESC="Το μέγιστο χρονικό διάστημα που θα περιμένουμε να απαντήσει ο διακομιστής του Mastodon στο αίτημά μας για φόρτωση του τουτ πριν υποθέσουμε πως η φόρτωση είναι αδύνατη."
+
+PLG_CONTENT_FEDIVERSE_CUSTOM_CERTIFICATE_LABEL="Προσασρμοσμένη Διαδρομή Πιστοποιητικού TLS"
+PLG_CONTENT_FEDIVERSE_CUSTOM_CERTIFICATE_DESC="Η απόλυτη διαδρομή στο σύστημα αρχείων προς ένα προσαρμοσμένο πιστοποιητικό TLS. Απαιτείται μόνο έαν ο διακομιστής Mastodon χρησιμοποιεί ένα αυτουπογεγραμμένο πιστοποιητικό TLS."
