@@ -1,3 +1,7 @@
+Fediverse Tools for Joomla, version 1.0.2
+================================================================================
++ Greek translation
+
 Fediverse Tools for Joomla, version 1.0.1
 ================================================================================
 ~ Installation throws an error due to a typo in the post-installation script
